@@ -8,71 +8,55 @@
 class wxCheckListBox : public wxListBox
 {
 public:
-	/**
-	 * \brief Default constructor. 
-	*/
+  wxCheckListBox();
+  wxCheckListBox(wxWindow *parent, wxWindowID id,
+                 const wxPoint& pos = wxDefaultPosition,
+                 const wxSize& size = wxDefaultSize,
+                 int nStrings = 0,
+                 const wxString choices[] = NULL,
+                 long style = 0,
+                 const wxValidator& validator = wxDefaultValidator,
+                 const wxString& name = wxListBoxNameStr);
+  wxCheckListBox(wxWindow *parent, wxWindowID id,
+                 const wxPoint& pos,
+                 const wxSize& size,
+                 const wxArrayString& choices,
+                 long style = 0,
+                 const wxValidator& validator = wxDefaultValidator,
+                 const wxString& name = wxListBoxNameStr);
 
-   wxCheckListBox() ;
-	/**
-	 * \brief Constructor, creating and showing a list box.
+  bool Create(wxWindow *parent, wxWindowID id,
+                const wxPoint& pos = wxDefaultPosition,
+                const wxSize& size = wxDefaultSize,
+                int n = 0, const wxString choices[] = NULL,
+                long style = 0,
+                const wxValidator& validator = wxDefaultValidator,
+                const wxString& name = wxListBoxNameStr);
+  bool Create(wxWindow *parent, wxWindowID id,
+                const wxPoint& pos,
+                const wxSize& size,
+                const wxArrayString& choices,
+                long style = 0,
+                const wxValidator& validator = wxDefaultValidator,
+                const wxString& name = wxListBoxNameStr);
+
+  // override base class virtuals
+  virtual void Delete(int n);
+
+  virtual bool SetFont( const wxFont &font );
+
+  // items may be checked
+  virtual bool IsChecked(size_t uiIndex) const;
+  virtual void Check(size_t uiIndex, bool bCheck = true);
+
+  // return the index of the item at this position or wxNOT_FOUND
+  int HitTest(const wxPoint& pt) const { return DoHitTestItem(pt.x, pt.y); }
+  int HitTest(wxCoord x, wxCoord y) const { return DoHitTestItem(x, y); }
+
+  // accessors
+  size_t GetItemHeight() const { return m_nItemHeight; }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\pythonnote{The wxCheckListBox constructor in wxPython reduces the  
-and   arguments are to a single argument, which is
-a list of strings.}
-
-\perlnote{In wxPerl there is just an array reference in place of  
-and  .} 
-	 * \param wxWindow*  
-	 * \param wxWindowID  
-	 * \param const wxPoint&  
-	 * \param const wxSize&  
-	 * \param int  
-	 * \param const wxString   
-	 * \param long  
-	 * \param const wxValidator&   
-	 * \param const wxString&   
-	*/
-
-  wxCheckListBox(wxWindow*  parent , wxWindowID  id , const wxPoint& pos , const wxSize& size, int  n =0 , const wxString  choices[] = NULL, long style = 0, const wxValidator&  validator = wxDefaultValidator, const wxString&  name = wxT("listBox"));
-	/**
-	 * \brief Destructor, destroying the list box. 
-	*/
-
-  virtual  ~wxCheckListBox() ;
-	/**
-	 * \brief Checks the given item. Note that calling this method doesn't result in
-wxEVT_COMMAND_CHECKLISTBOX_TOGGLE being emitted. 
-	 * \param int   
-	 * \param bool  
-	*/
-
-  void Check(int  item , bool check = true) ;
-	/**
-	 * \brief Returns true if the given item is checked, false otherwise. 
-	 * \param int  
-	*/
-
-  bool IsChecked(int  item ) const;
 };
 
 
